Upgrade to jetty-9.
- Update maven dependency versions.
- Utilized servlet-3.1 multi-part support.
- Removed commons-upload dependency.
- Prepare for Jakarta Servlets api. (require Java 11 however)